eval/a1_2023_07_03_16_59_22_grade_00.00/compile.log
a1.c:129:1: error: version control conflict marker in file
  129 | <<<<<<< HEAD
      | ^~~~~~~
a1.c: In function 'get_line':
a1.c:234:1: error: version control conflict marker in file
  234 | <<<<<<< HEAD
      | ^~~~~~~
a1.c:237:1: error: version control conflict marker in file
  237 | >>>>>>> e368b817e280518c9e8cd3841f33e5912bff79c7
      | ^~~~~~~
a1.c: In function 'extract_function':
a1.c:343:1: error: version control conflict marker in file
  343 | <<<<<<< HEAD
      | ^~~~~~~
a1.c:348:13: error: 'zero' undeclared (first use in this function); did you mean 'bzero'?
  348 |         if (zero < 0) {
      |             ^~~~
      |             bzero
a1.c:348:13: note: each undeclared identifier is reported only once for each function it appears in
a1.c:353:1: error: version control conflict marker in file
  353 | <<<<<<< HEAD
      | ^~~~~~~
a1.c:356:1: error: version control conflict marker in file
  356 | >>>>>>> e368b817e280518c9e8cd3841f33e5912bff79c7
      | ^~~~~~~
a1.c: In function 'listFindAll':
a1.c:416:28: warning: implicit declaration of function 'parse_function'; did you mean 'extract_function'? [-Wimplicit-function-declaration]
  416 |                         if(parse_function(fullPath,HEADER,1)==1)
      |                            ^~~~~~~~~~~~~~
      |                            extract_function
